--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ session_destroy();
         <p>Panca  <span> &</span> Sri</p>
         <p class="quote"></p>
       </div>
-      <!-- <audio autoplay>
+      <audio autoplay>
         <source src="music/music.mp3" type="audio/mpeg">
-      </audio> -->
+      </audio>
     </section>
     <section class="bride bg-light text-center">
       <h4 data-aos="fade-up" data-aos-duration="1500">Sang Pengantin</h4>
@@ -149,7 +149,7 @@ session_destroy();
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script>
+    <!-- <script>
       window.addEventListener('load', function () {
         var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
         var source = audioCtx.createBufferSource();
@@ -168,6 +168,6 @@ session_destroy();
         });
         xhr.send();
     });
-    </script>
+    </script> -->
   </body>
 </html>
