--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
       </div>
     </div>
     <script>
-      const rollSound = new Audio("music/music.mp3");
-      $('.open').click(e => rollSound.play());
-    </script>
+      var src;
+        document.querySelector("button")
+        .onclick = function() {
+          src.postMessage("clicked", src.location.href);
+        }
+        window.onmessage = function(e) {
+          console.log(e.data);
+          src = e.source;
+        }
+      </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
