--- a/undangan.html
+++ b/undangan.html
@@ -33,7 +33,7 @@ session_destroy();
         <p>Panca  <span> &</span> Sri</p>
         <p class="quote"></p>
       </div>
-      <audio autoplay>
+      <audio autoplay id="myAudio">
         <source src="music/music.mp3" type="audio/mpeg">
       </audio>
     </section>
@@ -134,7 +134,7 @@ session_destroy();
       </div>
       <p class="text-white">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/dennykd_/" class="creator fw-bold text-decoration-none">Dennykd_</a></p>
     </section>
-
+    <a onclick="pauseAudio()" href="#!" class="musicOff"><img src="img/stop.png" alt="" id="myBtn" width="40px"></a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
@@ -149,25 +149,45 @@ session_destroy();
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- <script>
-      window.addEventListener('load', function () {
-        var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        var source = audioCtx.createBufferSource();
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', 'music/music.mp3');
-        xhr.responseType = 'arraybuffer';
-        xhr.addEventListener('load', function (r) {
-            audioCtx.decodeAudioData(
-                    xhr.response, 
-                    function (buffer) {
-                        source.buffer = buffer;
-                        source.connect(audioCtx.destination);
-                        source.loop = false;
-                    });
-            source.start(0);
+    <script src="https://khaalipaper.com/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript">
+      //Get the button:
+      mybutton = document.getElementById("myBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function() {scrollFunction()};
+
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }                
+      function changeImg() {
+          var image = document.getElementById('myBtn');
+          if (image.src.match("img/stop.png")) {
+              image.src = "img/play.png";
+          }
+          else {
+              image.src = "img/stop.png";
+          }
+      }
+      $(document).ready(function(){
+        $(".musicOff").click(function(){
+            var image = document.getElementById('myBtn');
+            var x = document.getElementById("myAudio");
+            x.play();
+            if (image.src.match("img/play.png")) {
+                image.src = "img/stop.png";
+            }
+            else {
+                image.src = "img/play.png";
+                x.pause();
+            }
         });
-        xhr.send();
-    });
-    </script> -->
+      });
+    </script>
+    
   </body>
 </html>
