--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <h4>Undangan Pernikahan</h4>
         </div>
         <h1>Panca  <span> &</span> Sri</h1>
-        <div class="content">
+        <div class="content mt-3">
           <h6>Kepada Bpk/Ibu/Saudara/i</h6>
           <h6>Tanpa Mengurangi Rasa Hormat, Kami Mengundang Anda Untuk Dapat Menghadiri Di Acara Pernikahan Kami.</h6>
         </div>
-        <a href="undangan.html" class="open btn btn-outline-light rounded-pill mt-2">Buka Undangan</a>
+        <a href="undangan.html" class="open btn btn-outline-light rounded-pill">Buka Undangan</a>
       </div>
     </div>
     <script>
