--- a/undangan.html
+++ b/undangan.html
@@ -143,16 +143,73 @@ session_destroy();
         <source src="video/video.mp4" type="video/mp4"  data-aos-duration="2000">
       </video>
     </section>
+    <section class="greeting">
+      <div class="text-greeting text-center">
+        <h4 data-aos="fade-up" data-aos-duration="1500">Ucapan Untuk Kami</h4>
+      </div>
+      <div class="row justify-content-center mt-5" data-aos="zoom-in">
+        <div class="col-6">
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Berhasil!</strong> Ucapan anda sudah terkirim.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="form-ucapan">
+            <div class="mb-3">
+              <label for="name" class="form-label" style="font-family: font3 !important;">Nama Lengkap</label>
+              <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
+            </div>
+            <div class="mb-3">
+              <label for="pesan" class="form-label" style="font-family: font3 !important;">Ucapan & Harapan</label>
+              <textarea class="form-control" id="pesan" rows="3" name="ucapan"></textarea>
+            </div>
+            <button type="submit" class="btn btn-outline-dark btn-kirim" style="font-family: font3 !important;">Kirim</button>
+            <button class="btn btn-dark btn-loading d-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
     <section class="footer text-center">
       <div class="text-footer text-white">
-        <h1  data-aos="fade-up" data-aos-duration="1500">Thank You</h1>
+        <h1  data-aos="fade-up" data-aos-duration="1500">Terima Kasih</h1>
       </div>
-      <p class="text-white">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/dennykd_/" class="creator fw-bold text-decoration-none">Dennykd_</a></p>
+      <p class="text-white">Made with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/dennykd_/" class="creator fw-bold text-decoration-none">Dennykd_</a></p>
     </section>
     <a onclick="pauseAudio()" href="#!" class="musicOff"><img src="img/stop.png" alt="" id="myBtn" width="40px"></a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/TextPlugin.min.js"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbx4-RWKAqAzksHWBgrJ__m_QOkgMHEDwLy4ZxgJwGFSo7ReGEO9cgurE9Bv2gjnX_fG9w/exec'
+      const form = document.forms['form-ucapan'];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+    
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol loading, hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            console.log("Success!", response);
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // resert form
+            form.reset();
+            console.log("success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
 
     <script>
       gsap.to(".quote", { duration: 7, delay: 3, text: "masa masa sulit yang pernah kita lewati adalah kenangan terindah yang pernah kita hadapi. kita sering bertengkar sama sama tidak mau mengalah. tapi, sekali lagi kita tetap mampu untuk bertahan dan memperjuangkan hubungan kita yang sangat mengesankan ini" });
