--- a/undangan.html
+++ b/undangan.html
@@ -148,7 +148,7 @@ session_destroy();
         <h4 data-aos="fade-up" data-aos-duration="1500">Ucapan Untuk Kami</h4>
       </div>
       <div class="row justify-content-center mt-5" data-aos="zoom-in">
-        <div class="col-6">
+        <div class="col-lg-6 col-md-9 col-sm-9 col-9">
           <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
             <strong>Berhasil!</strong> Ucapan anda sudah terkirim.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
