--- a/undangan.html
+++ b/undangan.html
@@ -143,14 +143,12 @@ session_destroy();
         <source src="video/video.mp4" type="video/mp4"  data-aos-duration="2000">
       </video>
     </section>
-<<<<<<< HEAD
-=======
     <section class="greeting">
       <div class="text-greeting text-center">
         <h4 data-aos="fade-up" data-aos-duration="1500">Ucapan Untuk Kami</h4>
       </div>
       <div class="row justify-content-center mt-5" data-aos="zoom-in">
-        <div class="col-lg-6 col-md-9 col-sm-9 col-9">
+        <div class="col-6">
           <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
             <strong>Berhasil!</strong> Ucapan anda sudah terkirim.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -173,7 +171,6 @@ session_destroy();
         </div>
       </div>
     </section>
->>>>>>> fbe33be88a88a6f61f7211db75825ecddc477c85
     <section class="footer text-center">
       <div class="text-footer text-white">
         <h1  data-aos="fade-up" data-aos-duration="1500">Terima Kasih</h1>
