--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <div class="card" data-aos="fade-up" data-aos-duration="1500">
       <h1 >Hari Bahagia,</h1>
       <p >atas karunia tuhan yang maha esa, perkenankanlah kami mengundang bapak/ibu/saudara/i untuk berkenan untuk hadir di acara  pernikahan kami yang akan diadakan pada :</p>
-      <h1 >Senin, 07 Maret 2022</h1>
+      <h1 >Selasa, 08 Maret 2022</h1>
       <img src="img/ring1.png" alt="" >
       <h1 >Resepsi</h1>
-      <p >jam : 15.00 wita - selesai</p>
+      <p >jam : 12.00 wita - selesai</p>
       <p >alamat : dusun tabang, desa bebetin, sawan, buleleng</p>
       <a href="http://maps.google.com/maps?q=8°09'18.5S 115°11'07.9E" class="btn btn-dark" target="_blank" >Lokasi</a>
     </div>
