--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h1 class="mt-5" >Sri</h1>
             <h2 >Ni Putu Sriasih</h2>
             <p >Putri dari :</p>
-            <p >Bapak I Ketut Tambun & Ibu Ni Ketut Sariasih</p>
+            <p >Alm. Bapak I Ketut Tambun & Ibu Ni Ketut Sariasih</p>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <h1 >Selasa, 08 Maret 2022</h1>
       <img src="img/ring1.png" alt="" >
       <h1 >Resepsi</h1>
-      <p >jam : 12.00 wita - selesai</p>
+      <p >jam : 14.00 wita - selesai</p>
       <p >alamat : dusun tabang, desa bebetin, sawan, buleleng</p>
       <a href="http://maps.google.com/maps?q=8°09'18.5S 115°11'07.9E" class="btn btn-dark" target="_blank" >Lokasi</a>
     </div>
